# cosmoclerk

./: .enc  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_RUST.md  bot.js  config.js  cosmoclerk.service  eslint.config.js  eslint.config.mjs  evmRpcHealth.js  handlers.js  main.js  package-lock.json  package.json  refactor.js  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
funcs/: chainFuncs.js  index.js  infoFuncs.js  menuFuncs.js
scripts/: build.sh  check.sh  deploy.sh
src/: bot.rs  bot.ts  cache.rs  commands.rs  handlers.rs  index.ts  main.rs  tests.rs  utils.rs
src/actions/: addUserChain.ts  handleChainAction.ts  handleChainSelection.ts  handleCustomCommand.ts  handleInlineButtonPress.ts  handlePointerLookup.ts  handleUnknownCommand.ts  listUserChains.ts  removeUserChain.ts  sendAvailableChains.ts  sendChainDetails.ts  sendGovernanceDetails.ts  sendHelpInfo.ts  sendNetworkStatus.ts  sendTestnetDetails.ts  sendValidatorsDetails.ts  setupActions.ts
src/bot/: actions.ts  bot.ts  handlers.ts
src/botUtils/: botEventLogger.ts  cacheUserPreferences.ts  collectMetrics.ts  editMessage.ts  endpointsStatus.ts  execPromise.ts  handleGeneralNavigation.ts  handleMenuSelection.ts  listAvailableChains.ts  logMetricsJob.ts  logUserAction.ts  paginateChains.ts  readFileSafely.ts  sendMessage.ts  setupRepoUpdateJob.ts  validateUserInput.ts
src/chain/: chainInfo.ts  endpoints.ts
src/chainUtils/: getChainExplorers.ts  getChainGovernanceDetails.ts  getChainInfo.ts  getChainList.ts  getChainPeers.ts  getChainRpcEndpoints.ts  getNetworkStatus.ts  getTestnetChainInfo.ts  getValidatorsList.ts  (+3 more)
utils/: chainUtils.js  coreUtils.js  dataUtils.js  index.js  repoUtils.js  sessionUtils.js
(+33 files in other folders)
