[package]
name = "cosmoclerk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram bot framework
teloxide = { version = "0.12", features = ["macros"] }

# Our chain registry crate (using local version)
chain-registry = { path = "../chain-registry_crate" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Environment variables
dotenv = "0.15"

# Time handling
chrono = "0.4"

# Collections
dashmap = "5.5"