[package]
name = "cosmoclerk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram bot framework
teloxide = { version = "0.12", features = ["macros"] }

# Chain registry from crates.io
cosmos-chain-registry = "0.5.0"

# Cosmos SDK and IBC gRPC clients
cosmos-sdk-proto = { version = "0.27", features = ["grpc-transport"] }
ibc-proto = "0.52"
osmosis-std = "0.27"
tonic = { version = "0.13", features = ["transport", "tls-native-roots"] }
prost = "0.13"
tendermint-proto = "0.40"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Environment variables
dotenv = "0.15"

# Time handling
chrono = "0.4"

# Collections
dashmap = "5.5"
